# cs2-nodegraph

./: .gitignore  README.md  pyproject.toml
scripts/: build_opencs2_graph.py  download_opencs2_dataset.py
webui/: index.html  package-lock.json  package.json
webui/public/data/: opencs2_play_edges.csv  opencs2_play_summary.json  opencs2_play_vectors.csv
webui/scripts/: import-data.js
webui/src/: main.js  styles.css
